spec/e2e/method/refer_to_name.lit
type Foo {
  method {
    println method; # error: [line 3] Undefined variable 'method'.
  }
}

Foo().method();
